add get user balance
