# docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/api/user/balance": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Этот эндпоинт для получение текущего баланса пользователя",
                 "produces": [
                     "application/json"
@@ -13,7 +18,19 @@
                 "summary": "Получение текущего баланса пользователя",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "успешная обработка запроса",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "пользователь не авторизован",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "внутренняя ошибка сервера",
                         "schema": {
                             "type": "string"
                         }
